--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.PROJECT"
         tools:targetApi="31">
         <activity
+            android:name=".Dialog_Added_Book"
+            android:exported="false" />
+        <activity
             android:name=".ShareBook"
             android:exported="false" />
         <activity
