--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,6 @@
         android:theme="@style/Theme.PROJECT"
         tools:targetApi="31">
         <activity
-            android:name="com.example.project.Login"
-            android:exported="false" />
-        <activity
             android:name="com.example.project.MainActivity"
             android:exported="true">
             <intent-filter>
@@ -28,12 +25,28 @@
         <activity
             android:name="com.example.project.EnterSDT"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.project.EnterOTP"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name="com.example.project.NhapThongTinCaNhan"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name="com.example.project.TaoPassWord"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name="com.example.project.Start"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name="com.example.project.Login"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
