--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,6 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".ui.LibraryActivity"
-            android:exported="false"/>
-        <activity
             android:name=".SearchActivity"
             android:exported="false" />
         <activity
@@ -29,7 +26,7 @@
             android:name=".BookDetail"
             android:exported="false" />
         <activity
-            android:name=".HomePage"  
+            android:name=".UI.UI"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
