--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,8 @@ googleGmsGoogleServices = "4.4.2"
 glide = "5.0.0-rc01"
 compiler = "5.0.0-rc01"
 firebaseFirestore = "25.1.0"
-glideTransformations = "4.3.0" # Giữ lại firebaseFirestore từ nhánh main
+glideTransformations = "4.3.0"
+firebaseAuth = "23.1.0" # Giữ lại firebaseFirestore từ nhánh main
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -30,7 +31,8 @@ firebase-storage = { group = "com.google.firebase", name = "firebase-storage", v
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 compiler = { group = "com.github.bumptech.glide", name = "compiler", version.ref = "compiler" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
-glide-transformations = { group = "jp.wasabeef", name = "glide-transformations", version.ref = "glideTransformations" } # Giữ lại từ nhánh main
+glide-transformations = { group = "jp.wasabeef", name = "glide-transformations", version.ref = "glideTransformations" }
+firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" } # Giữ lại từ nhánh main
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
