fix xac thuc sdt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,56 +15,60 @@
         android:theme="@style/Theme.PROJECT"
         tools:targetApi="31">
         <activity
+            android:name=".VerifyCode"
+            android:exported="false" />
+        <!-- MainActivity được đặt là màn hình khởi động đầu tiên với exported=true -->
+        <activity
             android:name=".MainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.Ebook"
-            android:exported="true" />
-        <activity
-            android:name=".SearchActivity"
-            android:exported="true" />
-        <activity
-            android:name=".Dialog_Added_Book"
-            android:exported="true" />
-        <activity
-            android:name=".ShareBook"
-            android:exported="true" />
-        <activity
-            android:name=".EnterOTP"
-            android:exported="true" />
-        <activity
-            android:name=".EnterSDT"
-            android:exported="true" />
-        <activity
-            android:name=".Login"
-            android:exported="true" />
-        <activity
-            android:name=".NhapThongTinCaNhan"
-            android:exported="true" />
-        <activity
-            android:name=".TaoPassWord"
-            android:exported="true" />
-        <activity
-            android:name=".Start"
-            android:exported="true" />
-        <activity
-            android:name=".BookDetail"
-            android:exported="true" />
-        <activity
-            android:name=".ui.Menu"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity> <!-- Các activity khác đều được đặt exported=false -->
+        <activity
+            android:name=".ui.Ebook"
+            android:exported="false" />
+        <activity
+            android:name=".SearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Dialog_Added_Book"
+            android:exported="false" />
+        <activity
+            android:name=".ShareBook"
+            android:exported="false" />
+        <activity
+            android:name=".EnterOTP"
+            android:exported="false" />
+        <activity
+            android:name=".EnterSDT"
+            android:exported="true" />
+        <activity
+            android:name=".Login"
+            android:exported="false" />
+        <activity
+            android:name=".NhapThongTinCaNhan"
+            android:exported="false" />
+        <activity
+            android:name=".TaoPassWord"
+            android:exported="false" />
+        <activity
+            android:name=".Start"
+            android:exported="false" />
+        <activity
+            android:name=".BookDetail"
+            android:exported="false" />
+        <activity
+            android:name=".ui.Menu"
+            android:exported="false" />
         <activity
             android:name=".ui.History"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".ui.VanHoc"
-            android:exported="true" />
+            android:exported="false" />
 
         <meta-data
             android:name="preloaded_fonts"
