--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,18 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PROJECT"
         tools:targetApi="31">
-        <activity
-            android:name=".VerifyCode"
-            android:exported="false" />
         <!-- MainActivity được đặt là màn hình khởi động đầu tiên với exported=true -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity> <!-- Các activity khác đều được đặt exported=false -->
         <activity
             android:name=".ui.Ebook"
@@ -62,7 +55,13 @@
             android:exported="false" />
         <activity
             android:name=".ui.Menu"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.History"
             android:exported="false" />
