--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,12 +15,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PROJECT"
         tools:targetApi="31">
-        <!-- MainActivity được đặt là màn hình khởi động đầu tiên với exported=true -->
+        <activity
+            android:name=".ui.PdfViewerActivity"
+            android:exported="false" />
+        <!-- MainActivity là màn hình khởi động đầu tiên -->
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity> <!-- Các activity khác đều được đặt exported=false -->
+            android:exported="true"></activity> <!-- Các hoạt động khác -->
+        <activity
+            android:name=".ui.ReadBook"
+            android:exported="true" /> <!-- Đặt exported=true nếu bạn muốn gọi từ hoạt động khác -->
         <activity
             android:name=".ui.Ebook"
             android:exported="false" />
@@ -53,11 +58,11 @@
         <activity
             android:name=".ui.Menu"
             android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".ui.History"
@@ -69,6 +74,9 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+        <meta-data
+            android:name="com.google.firebase.database.FirebaseDatabaseUrl"
+            android:value="https://myfirebaseapp.firebaseio.com/" />
     </application>
 
 </manifest>
