--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,20 @@
         android:theme="@style/Theme.PROJECT"
         tools:targetApi="31">
         <activity
-            android:name=".ui.PdfViewerActivity"
+            android:name=".Sign_in"
             android:exported="false" />
-        <!-- MainActivity là màn hình khởi động đầu tiên -->
+        <activity
+            android:name=".ui.PdfViewerActivity"
+            android:exported="false" /> <!-- MainActivity là màn hình khởi động đầu tiên -->
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.Ebook"
             android:exported="false" />
@@ -55,11 +63,7 @@
         <activity
             android:name=".ui.Menu"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ui.History"
