Rename files for MVC structure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,11 @@
         android:theme="@style/Theme.PROJECT"
         tools:targetApi="31">
         <activity
-            android:name=".LibraryMenuActivity"
+            android:name=".ui.LibraryMenuActivity"
             android:exported="false" />
         <!-- MainActivity là màn hình khởi động đầu tiên -->
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -29,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Sign_up"
+            android:name=".ui.SignUpActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
@@ -37,15 +37,15 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.Ebook"
+            android:name=".ui.EbookActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".SearchActivity"
+            android:name=".ui.SearchActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Dialog_Added_Book"
+            android:name=".ui.Dialog_Added_Book"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
@@ -57,7 +57,7 @@
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Login"
+            android:name=".ui.LoginActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
@@ -73,7 +73,7 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".BookDetail"
+            android:name=".ui.BookDetailActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
@@ -81,11 +81,11 @@
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.History"
+            android:name=".ui.HistoryActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.VanHoc"
+            android:name=".ui.VanHocActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
 
